# python-lib-starter

./: .gitignore  LICENSE  README.md  justfile  pyproject.toml
.github/workflows/: lint-and-fmt.yml  release.yml  unit-test.yml
moelib/: __init__.py  __main__.py
src/moelib/: __init__.py  __main__.py
tests/: test_moelib.py
